# pricewatch-cli

./: .gitignore  07-web-scraping-tool-screen-01.html  07-web-scraping-tool-screen-01.prompt.md  07-web-scraping-tool-screen-02.html  07-web-scraping-tool-screen-02.prompt.md  07-web-scraping-tool-screen-03.html  07-web-scraping-tool-screen-03.prompt.md  07-web-scraping-tool-stitch-screens.md  PROJECT.md  README.md  baseline_screens.txt  pyproject.toml  requirements.txt
demo/: headphones.html  keyboard.html  monitor.html
pricewatch/: __init__.py  __main__.py  cli.py  database.py  demo.py  display.py  export.py  scraper.py
tests/: test_cli.py  test_database.py  test_demo.py  test_display.py  test_export.py  test_scraper.py
